--- a/styleguide/css/stylesheet.css
+++ b/styleguide/css/stylesheet.css
@@ -826,7 +826,7 @@ td img {
   width: 80%;
   height: 110%;
   margin-left: 10%;
-  font-family: "MingLiU_HKSCS";
+  font-family: "Roboto Mono", monospace;
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
   padding: 2%;
 }
@@ -2336,7 +2336,7 @@ input:checked + .roundbutton:before {
   width: 80%;
   height: 110%;
   margin-left: 10%;
-  font-family: "MingLiU_HKSCS";
+  font-family: "Roboto Mono", monospace;
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
   padding: 2%;
 }
