første omgang sletning af unødvendig kode

--- a/styleguide/css/stylesheet.css
+++ b/styleguide/css/stylesheet.css
@@ -1815,218 +1815,6 @@ li img {
   padding: 2%;
   font-family: "Roboto Mono", monospace;
 }
-
-/*
-.btnsGridItem15,
-.btnsGridItem17,
-.btnsGridItem19,
-.btnsGridItem21,
-.btnsGridItem23,
-.btnsGridItem25 {
-  grid-column: 1/2;
-  width: 68%;
-  align-self: center;
-  justify-self: center;
-}
-
-.btnsGridItem14,
-.btnsGridItem16,
-.btnsGridItem18,
-.btnsGridItem20,
-.btnsGridItem22,
-.btnsGridItem24,
-.btnsGridItem26 {
-  grid-column: 2/3;
-  width: 68%;
-  align-self: center;
-  justify-self: center;
-}
-
-.btnLoginEmail,
-.btnLoginNr {
-  background-color: #e3bbab;
-  font-weight: bold;
-  border: none;
-  width: 250px;
-  height: 50px;
-  border-radius: 15px;
-  font-size: 14px;
-  font-family: "Roboto", sans-serif;
-  color: #1f2d46;
-}
-
-.btnLoginEmail,
-.btnLoginNr,
-.btnBook,
-.btnTops {
-  background-color: #e3bbab;
-  font-weight: 700;
-  border: none;
-  width: 250px;
-  height: 50px;
-  border-radius: 15px;
-  font-size: 16px;
-  margin: 10px auto;
-  font-family: "Roboto", sans-serif;
-  color: #1f2d46;
-  align-self: center;
-  justify-self: center;
-}
-
-.redigerBooking {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-  display: block;
-  background-color: #e3bbab;
-  border: none;
-  width: 55px;
-  height: 55px;
-  border-radius: 15px;
-  font-size: 10px;
-  margin: 25px 0 0 25px;
-  font-family: "Roboto", sans-serif;
-  color: #1f2d46;
-}
-
-.bookIgen {
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
-}
-
-.bookIgen {
-  display: block;
-  background-color: #e3bbab;
-  border: none;
-  width: 55px;
-  height: 55px;
-  border-radius: 15px;
-  font-size: 10px;
-  margin: 25px 0 0 25px;
-  font-family: "Roboto", sans-serif;
-  color: #1f2d46;
-}
-
-.headerProfile {
-  color: #1f2d46;
-  margin: 5% 0 5% 5%;
-  font-family: "Roboto", sans-serif;
-  font-size: 20px;
-}
-
-.myProfileImg {
-  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
-  width: 30%;
-  height: 30%;
-  border-radius: 15px;
-}
-
-.headerProfileImg {
-  text-align: center;
-  margin: 0 0 5% 0;
-}
-
-.formProfile section div {
-  text-align: center;
-  margin: 0 auto;
-}
-
-.formProfile section div label {
-  display: block;
-  text-align: center;
-  margin-top: 15px;
-}
-
-.formProfile section div input {
-  width: 75%;
-  border-radius: 15px;
-  border: none;
-  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.4);
-  padding: 7px;
-  font-family: "Roboto", sans-serif;
-}
-
-.profileContainer {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr;
-}
-
-.sliderBtn {
-  grid-column: 1/2;
-  grid-row: 1/2;
-  align-self: center;
-  justify-self: end;
-  margin-right: 20px;
-}
-
-.sliderText {
-  grid-column: 2/3;
-  grid-row: 1/2;
-}
-
-.sliderText p {
-  margin-bottom: 8px;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-}
-*/
-
-/*
-.ergebnis {
-  font-size: 2rem;
-  font-family: sans-serif;
-  padding: 2rem 0 2rem 2rem;
-  color: white;
-}
-
-.toggle {
-  margin: 2px 0 0 2rem;
-  position: relative;
-  display: inline-block;
-  width: 3rem;
-  height: 1.5rem;
-}
-
-.toggle input {
-  display: none;
-}
-
-.roundbutton {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  background-color: #ccc;
-  display: block;
-  transition: all 0.3s;
-  border-radius: 3.4rem;
-  cursor: pointer;
-}
-
-.roundbutton:before {
-  position: absolute;
-  content: "";
-  height: 1.3rem;
-  width: 1.4rem;
-  border-radius: 100%;
-  display: block;
-  left: 0.2rem;
-  bottom: 0.1rem;
-  background-color: white;
-  transition: all 0.3s;
-}
-
-input:checked + .roundbutton {
-  background-color: #1f2d46;
-}
-
-input:checked + .roundbutton:before {
-  transform: translate(1.2rem, 0);
-}
-*/
-
 /*Knapper - SLUT*/
 
 /*LOGO*/
@@ -2091,29 +1879,6 @@ td img {
   background-color: #bb86fc;
 }
 
-/*
-.wrappercode-icons {
-  padding-bottom: 70px;
-}
-*/
-
-/*
-.kodeboks {
-  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
-  margin-left: 25%;
-  top: 200px;
-  width: 50%;
-  font-family: "Roboto Mono", monospace;
-  padding: 2%;
-}
-
-.pink {
-  padding-top: 4.5%;
-  margin-left: 25%;
-  width: 50%;
-  background-color: #bb86fc;
-}
-/*
 /*IKONER - SLUT*/
 
 /*LAYOUT*/
@@ -2188,133 +1953,8 @@ td img {
 /*LAYOUT - SLUT*/
 
 /*FORMULAR*/
-/*
-.sektion7 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto auto auto;
-  margin-top: 30px;
-  margin-left: 110px;
-  grid-row-gap: 1%;
-}
-*/
+/*FORMULAR - SLUT*/
 
-/*
-.formular-box1 {
-  grid-column: 1/2;
-  grid-row: 1/2;
-}
-
-.formular-box2 {
-  grid-column: 1/2;
-  grid-row: 2/3;
-}
-
-.formular-box3 {
-  grid-column: 1/2;
-  grid-row: 3/4;
-}
-*/
-
-/*
-.kodeboks2 {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  width: 80%;
-  height: auto;
-  margin-left: 10%;
-  font-family: "Roboto Mono", monospace;
-  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
-  margin-bottom: 10%;
-  padding: 20px 20px;
-}
-.kodeboks3 {
-  grid-column: 2/3;
-  grid-row: 2/3;
-  width: 80%;
-  height: auto;
-  margin-left: 10%;
-  font-family: "Roboto Mono", monospace;
-  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
-  margin-bottom: 10%;
-  padding: 20px 20px;
-}
-.kodeboks4 {
-  grid-column: 2/3;
-  grid-row: 3/4;
-  width: 80%;
-  height: auto;
-  margin-left: 10%;
-  font-family: "Roboto Mono", monospace;
-  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
-  margin-bottom: 10%;
-  padding: 20px 20px;
-}
-
-*/
-
-/*
-.formular1 {
-  width: 80%;
-  align-content: center;
-}
-
-.formular2 {
-  width: 80%;
-  margin-top: -5%;
-  align-content: center;
-}
-
-.formular3 {
-  width: 80%;
-  margin-top: -10%;
-  align-content: center;
-}
-.pink3,
-.pink4,
-.pink5 {
-  grid-column: 2/3;
-  padding-top: 4.5%;
-  width: 80%;
-  height: 60px;
-  background-color: #e3bbab;
-  margin-left: 10%;
-}
-.pink3 {
-  grid-row: 1/2;
-}
-.pink4 {
-  grid-row: 2/3;
-}
-.pink5 {
-  grid-row: 3/4;
-}
-*/
-/*
-.kode-overskrift {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  margin-top: -15%;
-  margin-left: -9%;
-}
-*/
-/*
-.formitem {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  padding-bottom: 70px;
-}
-.formitem2 {
-  grid-column: 2/3;
-  grid-row: 2/3;
-  padding-bottom: 70px;
-}
-.formitem3 {
-  grid-column: 2/3;
-  grid-row: 3/4;
-  padding-bottom: 70px;
-}
-*/
 
 /*COLLAPSIBLE BOX - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_collapsible */
 
