--- a/styleguide/css/stylesheet.css
+++ b/styleguide/css/stylesheet.css
@@ -1717,7 +1717,7 @@ li img {
   margin-right: 39px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: auto;
   margin-top: 30px;
   margin-left: 110px;
 }
